# markov-cpp-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  markovplay.puml
include/: interrupt_handler.hpp  markovchain.hpp  microservice_controller.hpp  utils.hpp  version.hpp  wordprediction.hpp
src/: chain.cpp  chain.hpp  controller.cpp  controller.hpp  interupt_handler.hpp  main.cpp  markov.cpp  markov.hpp  markovchain.cpp  microservice.cpp  microservice_controller.hpp  middleware.hpp  router.cpp  router.hpp  server.cpp  server.hpp  utils.cpp  version.hpp  wordprediction.hpp
static/: app.js  index.html
